# mpqr-tgbot

./: .env.examples  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  context.py  db.py  keyboards.py  main.py  states.py  telegram_safe.py  texts.py  validators.py
app/handlers/: manager.py  user.py
