[project]
name = "mpqr-tgbot"
version = "0.1.0"
description = "Telegram feedback bot MVP"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram>=3.27.0",
    "aiogram-dialog>=2.6.0",
    "aiosqlite>=0.20.0",
    "loguru>=0.7.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0.1",
]
